--- a/.github/workflows/compilable_on_macos.yml
+++ b/.github/workflows/compilable_on_macos.yml
@@ -14,7 +14,7 @@ jobs:
 
     - name: install dependencies (if not)
       run: |
-        brew install -y clang make
+        brew install clang make
 
     - name: test
       run: make re
