--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,14 +1,26 @@
-# **************************************************************************** #
-#                                                                              #
-#                                                         :::      ::::::::    #
-#    Makefile                                           :+:      :+:    :+:    #
-#                                                     +:+ +:+         +:+      #
-#    By: ymanchon <ymanchon@student.42.fr>          +#+  +:+       +#+         #
-#                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2024/05/13 16:21:19 by ymanchon          #+#    #+#              #
-#    Updated: 2025/03/25 15:19:52 by ymanchon         ###   ########.fr        #
-#                                                                              #
-# **************************************************************************** #
+#
+ #* MIT License
+ #* 
+ #* Copyright (c) 2025 OhBama (Yann Manchon)
+ #* 
+ #* Permission is hereby granted, free of charge, to any person obtaining a copy
+ #* of this software and associated documentation files (the "Software"), to deal
+ #* in the Software without restriction, including without limitation the rights
+ #* to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+ #* copies of the Software, and to permit persons to whom the Software is
+ #* furnished to do so, subject to the following conditions:
+ #* 
+ #* The above copyright notice and this permission notice shall be included in all
+ #* copies or substantial portions of the Software.
+ #* 
+ #* THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+ #* IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+ #* FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+ #* AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+ #* LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+ #* OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+ #* SOFTWARE.
+#
 
 # ################ #
 #*    COULEURS    *#
@@ -45,7 +57,6 @@ all: compile
 compile:
 	$(CC) -g3 -fPIE unit_tester.cpp -Wno-unused-value -L.. -lhopt -o $(NAME)
 
-# Tests unitaires avec votre système
 unit:
 	make -C ..
 	@echo -e "$(YELLOW)$(BOLD)Compilation des tests unitaires...$(CLASSIC)"
