--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -86,7 +86,7 @@ jobs:
           mingw-w64-x86_64-clang
           mingw-w64-x86_64-make
           make
-          tar
+          zip
     - name: Build library (Windows)
       if: matrix.os == 'windows-latest'
       shell: msys2 {0}
