--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -85,8 +85,7 @@ jobs:
         install: >-
           mingw-w64-x86_64-clang
           mingw-w64-x86_64-make
-          make
-          zip
+          mingw-w64-x86_64-zip
     - name: Build library (Windows)
       if: matrix.os == 'windows-latest'
       shell: msys2 {0}
