--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -85,7 +85,8 @@ jobs:
         install: >-
           mingw-w64-x86_64-clang
           mingw-w64-x86_64-make
-          mingw-w64-x86_64-zip
+          make
+          zip
     - name: Build library (Windows)
       if: matrix.os == 'windows-latest'
       shell: msys2 {0}
